--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -7,3 +7,15 @@ services:
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+
+    linode.api:
+        class: AppBundle\Service\LinodeApiService
+        arguments: ["%linode.token%"]
+
+    linode.form.create:
+        class: AppBundle\Form\CreateLinodeType
+        arguments: ["@linode.api"]
+
+    linode.api.list:
+        class: AppBundle\Service\LinodeListService
+        arguments: ["@linode.api"]
