--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -18,10 +18,20 @@ services:
         tags:
             - { name: form.type }
 
-    linode.api.list:
-        class: AppBundle\Service\LinodeListService
+    linode.form.clone:
+        class: AppBundle\Form\CloneType
+        arguments: ["@linode.api.avail", "@linode.api.host"]
+        tags:
+            - { name: form.type }
+
+    linode.api.host:
+        class: AppBundle\Service\LinodeHostService
         arguments: ["@linode.api"]
 
     linode.api.avail:
         class: AppBundle\Service\LinodeAvailService
+        arguments: ["@linode.api"]
+
+    linode.api.ip:
+        class: AppBundle\Service\LinodeIpService
         arguments: ["@linode.api"]
