--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,6 @@
     "autoload-dev": {
         "psr-4": { "Tests\\": "tests/" }
     },
-    "repositories": [
-        {
-            "type": "git",
-            "url": "https://github.com/Nomad145/php-linode-api3.git",
-            "reference":"dev-linode-ips"
-        }
-    ],
     "require": {
         "php": ">=5.5.9",
         "symfony/symfony": "3.1.*",
@@ -29,7 +22,7 @@
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
-        "arodygin/linode-api-php": "dev-linode-ips",
+        "arodygin/linode-api-php": "^1.1",
         "myclabs/php-enum": "^1.4"
     },
     "require-dev": {
