--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,55 +1,19 @@
 version: '2'
 
 services:
-    volumes:
-        container_name: linode-volumes
-        image: ubuntu:trusty
-        volumes:
-            - .:/app
-            - ./var/cache:/app/var/cache
-            - ./data:/var/lib/mysql
-            - /tmp
-            - .project/sql:/docker-entrypoint-initdb.d
-
     php:
-        container_name: linode-php
-        image: heartland/php
+        container_name: php
+        image: nomad145/linode-php:latest
         build: .docker/php
-        volumes_from:
-            - volumes
-        # links:
-        #     - mariadb
+        environment:
+            XDEBUG_CONFIG: remote_host=10.105.38.105
 
-    linode:
-      container_name: linode-nginx
-      image: heartland/nginx
-      # build: .docker/nginx/heartland
-      volumes_from:
-          - volumes
+    nginx:
+      container_name: nginx
+      build: .docker/nginx
       links:
           - php
       environment:
         VIRTUAL_HOST: linode.localhost
       ports:
-        - "81:81"
-
-    # mariadb:
-    #   image: mariadb:latest
-    #   container_name: heartland-mariadb
-    #   volumes_from:
-    #       - volumes
-    #   environment:
-    #     MYSQL_ROOT_PASSWORD: root
-    #     MYSQL_USER: dbuser
-    #     MYSQL_PASSWORD: dbpass
-    #     MYSQL_DATABASE: dbname
-    #   ports:
-    #       - "3306:3306"
-
-    nginx-proxy:
-      image: jwilder/nginx-proxy
-      container_name: nginx-proxy
-      ports:
-        - "80:80"
-      volumes:
-        - /var/run/docker.sock:/tmp/docker.sock:ro
+          - "80:80"
