Run as sudo user.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: php
 php:
     - '7.1'
 before_script:
-    - apt-get install libssh2-1-dev
+    - sudo apt-get install libssh2-1-dev
     - pecl install ssh2-1.0
