--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,5 @@ before_script:
     - sudo apt-get install libssh2-1-dev
     - printf "\n" | pecl install ssh2-1.0
     - composer install -n
+after_script:
+    - bash <(curl -s https://codecov.io/bash)
