--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -29,6 +29,6 @@
         </whitelist>
     </filter>
     <logging>
-        <log type="coverage-clover" target="clover.xml"/>
+        <log type="coverage-clover" target="coverage.xml"/>
     </logging>
 </phpunit>
