--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -8,7 +8,7 @@ security:
             memory:
                 users:
                     admin:
-                        password: '%env(ADMIN_PASSWORD)%'
+                        password: '%admin.password%'
                         roles: 'ROLE_ADMIN'
 
     encoders:
@@ -17,7 +17,6 @@ security:
             cost: 12
 
     firewalls:
-        # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
@@ -25,13 +24,6 @@ security:
         main:
             anonymous: ~
             http_basic: ~
-            # activate different ways to authenticate
-
-            # http_basic: ~
-            # http://symfony.com/doc/current/book/security.html#a-configuring-how-your-users-will-authenticate
-
-            # form_login: ~
-            # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
 
     access_control:
         - { path: ^/, roles: ROLE_ADMIN }
