--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,6 @@
         "herzult/php-ssh": "dev-master",
         "incenteev/composer-parameter-handler": "^2.0",
         "myclabs/php-enum": "^1.5",
-        "phpunit/phpunit": "5.7.9",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "symfony/monolog-bundle": "^3.0.2",
@@ -39,8 +38,8 @@
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
-        "symfony/dotenv": "^4.0@dev",
-        "symfony/phpunit-bridge": "^3.0"
+        "symfony/phpunit-bridge": "^3.0",
+        "phpunit/phpunit": "5.7.9"
     },
     "scripts": {
         "symfony-scripts": [
